[gd_scene load_steps=21 format=3 uid="uid://nwk853dmbcy8"]

[ext_resource type="Script" path="res://levels/menus/menu.gd" id="1_c41f7"]
[ext_resource type="Script" path="res://levels/parallax_background.gd" id="2_1pxps"]
[ext_resource type="Texture2D" uid="uid://bphwxf2glq4lt" path="res://player/art/Main Ship - Base - Full health.png" id="2_cyc4q"]
[ext_resource type="PackedScene" uid="uid://bau3vwxajqwug" path="res://levels/menus/background_bullet_spawner.tscn" id="2_o4xn3"]
[ext_resource type="Theme" uid="uid://ugv1ptuyjojl" path="res://main_theme.tres" id="3_7oxgc"]
[ext_resource type="Texture2D" uid="uid://c85dye611j5j" path="res://levels/art/level_2_bg.png" id="3_rsy2d"]
[ext_resource type="Script" path="res://levels/menus/start_game_button.gd" id="6_42xvk"]
[ext_resource type="FontFile" uid="uid://b6ol51f5b1c2j" path="res://random_shit/SPACEBOY.TTF" id="7_da3lc"]
[ext_resource type="Texture2D" uid="uid://cvtal0blpaokp" path="res://levels/art/settings.png" id="8_nbj6p"]

[sub_resource type="Animation" id="Animation_44oya"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ShipSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(789, 2199)]
}

[sub_resource type="Animation" id="Animation_q8ame"]
resource_name = "enter_ship"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ShipSprite:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 0.2),
"update": 0,
"values": [Vector2(785, 2199), Vector2(785, 1130)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"play_idle_anim"
}]
}

[sub_resource type="Animation" id="Animation_i66jt"]
resource_name = "ship_idle"
length = 3.0
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ShipSprite:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.65, 1.45, 2.3, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(668, 1027), Vector2(836, 956), Vector2(988, 1123), Vector2(785, 1130)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lbann"]
_data = {
"RESET": SubResource("Animation_44oya"),
"enter_ship": SubResource("Animation_q8ame"),
"ship_idle": SubResource("Animation_i66jt")
}

[sub_resource type="Gradient" id="Gradient_uduvj"]
offsets = PackedFloat32Array(0, 0.140271, 1)
colors = PackedColorArray(1, 1, 0, 0, 1, 0.545098, 0, 1, 1, 0, 0, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_qadm7"]
gradient = SubResource("Gradient_uduvj")

[sub_resource type="Curve" id="Curve_ilq51"]
_data = [Vector2(0, 1), 0.0, -1.44444, 0, 0, Vector2(1, 0), 0.944445, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_n3as6"]
curve = SubResource("Curve_ilq51")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_uxyx8"]
particle_flag_disable_z = true
direction = Vector3(0, 1, 0)
spread = 8.75
gravity = Vector3(0, 0, 0)
initial_velocity_min = 100.0
initial_velocity_max = 200.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_min = 25.0
scale_max = 35.0
scale_curve = SubResource("CurveTexture_n3as6")
color_ramp = SubResource("GradientTexture1D_qadm7")
turbulence_noise_strength = 3.34

[sub_resource type="LabelSettings" id="LabelSettings_aibx1"]
font = ExtResource("7_da3lc")
font_size = 128

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ureoj"]
bg_color = Color(0.215686, 0.215686, 0.215686, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 10

[node name="Menu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c41f7")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
script = ExtResource("2_1pxps")

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(0, 2000)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(640, 1000)
texture = ExtResource("3_rsy2d")

[node name="BackgroundBulletSpawner" parent="." instance=ExtResource("2_o4xn3")]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(10, 100)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -59.0
offset_right = 136.0
offset_bottom = 44.0
grow_vertical = 2
scale = Vector2(2.5, 2.79)

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_7oxgc")
text = "New Game"
script = ExtResource("6_42xvk")

[node name="ExitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_7oxgc")
text = "Quit Game"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "enter_ship"
libraries = {
"": SubResource("AnimationLibrary_lbann")
}

[node name="ShipSprite" type="Sprite2D" parent="."]
z_index = 4
position = Vector2(789, 2199)
scale = Vector2(10, 10)
texture = ExtResource("2_cyc4q")

[node name="EngineFX" type="GPUParticles2D" parent="ShipSprite"]
z_index = 3
z_as_relative = false
position = Vector2(0, 9.00001)
amount = 100
process_material = SubResource("ParticleProcessMaterial_uxyx8")
lifetime = 0.5
speed_scale = 0.75
fixed_fps = 60
trail_lifetime = 0.1

[node name="TitleLabel" type="Label" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 81.0
offset_top = 182.0
offset_right = 1197.0
offset_bottom = 534.0
text = "StarBlast"
label_settings = SubResource("LabelSettings_aibx1")
horizontal_alignment = 1
vertical_alignment = 1

[node name="SettingsButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = -189.0
offset_right = 239.0
offset_bottom = 51.0
grow_vertical = 0
scale = Vector2(0.75, 0.75)
texture_normal = ExtResource("8_nbj6p")

[node name="SettingsPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 175.0
offset_top = -660.0
offset_right = 659.0
offset_bottom = -134.0
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_ureoj")

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsPanel"]
layout_mode = 2
offset_left = 9.0
offset_top = 25.0
offset_right = 239.0
offset_bottom = 266.0
scale = Vector2(2, 2)

[node name="SettingsLabel" type="Label" parent="SettingsPanel/VBoxContainer"]
layout_mode = 2
text = "Settings"
horizontal_alignment = 1

[node name="Label" type="Label" parent="SettingsPanel/VBoxContainer"]
layout_mode = 2
text = "Volume:"

[node name="VolumeSlider" type="HSlider" parent="SettingsPanel/VBoxContainer"]
layout_mode = 2
min_value = -30.0
max_value = 0.0

[node name="FullScreenToggle" type="CheckButton" parent="SettingsPanel/VBoxContainer"]
layout_mode = 2
text = "Fullscreen"

[node name="VsyncToggle" type="CheckButton" parent="SettingsPanel/VBoxContainer"]
layout_mode = 2
button_pressed = true
text = "V-Sync"

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="focus_entered" from="SettingsButton" to="." method="_on_settings_button_focus_entered"]
[connection signal="focus_exited" from="SettingsButton" to="." method="_on_settings_button_focus_exited"]
[connection signal="pressed" from="SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="value_changed" from="SettingsPanel/VBoxContainer/VolumeSlider" to="." method="_on_volume_slider_value_changed"]
[connection signal="toggled" from="SettingsPanel/VBoxContainer/FullScreenToggle" to="." method="_on_full_screen_toggle_toggled"]
[connection signal="toggled" from="SettingsPanel/VBoxContainer/VsyncToggle" to="." method="_on_vsync_toggle_toggled"]
